alterando para suporte webm

--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-D1YBM2FMSV"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-D1YBM2FMSV');
-</script>
-
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Convert PDF files to Excel spreadsheets quickly and accurately. Free online PDF to Excel converter with high precision and secure processing." />
-    <meta name="keywords" content="PDF to Excel, convert PDF to Excel, PDF converter, Excel converter, online converter" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="PDF to Excel Converter - Convert PDFs to Excel Online" />
-    <meta property="og:description" content="Convert PDF files to Excel spreadsheets quickly and accurately. Free online PDF to Excel converter with high precision and secure processing." />
-    <meta property="og:type" content="website" />
-    <title>PDF to Excel Converter - Convert PDFs to Excel Online</title>
+    <meta name="description" content="Free online file converter - Convert PDFs, images, audio, and more with high quality and security." />
+    <meta name="keywords" content="file converter, pdf converter, image converter, audio transcription, background removal" />
+    <title>FileConverter - Free Online File Conversion Tools</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
