alterando para suporte webm

--- a/index.html
+++ b/index.html
@@ -2,11 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Free online file converter - Convert PDFs, images, audio, and more with high quality and security." />
-    <meta name="keywords" content="file converter, pdf converter, image converter, audio transcription, background removal" />
-    <title>FileConverter - Free Online File Conversion Tools</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>FileConverter - Free Online File Converter</title>
+    <meta name="title" content="FileConverter - Free Online File Converter" />
+    <meta name="description" content="Convert PDFs, images, audio files and more with our free online converter. Fast, secure, and easy to use." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.allconverte.xyz/" />
+    <meta property="og:title" content="FileConverter - Free Online File Converter" />
+    <meta property="og:description" content="Convert PDFs, images, audio files and more with our free online converter. Fast, secure, and easy to use." />
+    <meta property="og:image" content="/favicon/favicon-32x32.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="32" />
+    <meta property="og:image:height" content="32" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:url" content="https://www.allconverte.xyz/" />
+    <meta property="twitter:title" content="FileConverter - Free Online File Converter" />
+    <meta property="twitter:description" content="Convert PDFs, images, audio files and more with our free online converter. Fast, secure, and easy to use." />
+    <meta property="twitter:image" content="/favicon/favicon-32x32.png" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
