--- a/index.html
+++ b/index.html
@@ -35,9 +35,113 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <style>
+      :root {
+        --background: white;
+        --text: #1a1a1a;
+        --loading-dots: #7c3aed;
+        --bluespark: #4f46e5;
+      }
+
+      :root.dark {
+        --background: #1a1a1a;
+        --text: #e5e7eb;
+        --loading-dots: #7c3aed;
+        --bluespark: #818cf8;
+      }
+
+      body {
+        background: var(--background);
+        color: var(--text);
+        margin: 0;
+        font-family: 'Inter', sans-serif;
+      }
+
+      #loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: var(--background);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+        opacity: 1;
+        transition: opacity 0.5s ease-out;
+      }
+
+      #loading-screen.fade-out {
+        opacity: 0;
+      }
+
+      #loading-screen img {
+        width: 64px;
+        height: 64px;
+        margin-bottom: 1rem;
+      }
+
+      .loading-dots {
+        display: flex;
+        gap: 0.5rem;
+        margin: 1rem 0;
+      }
+
+      .dot {
+        width: 8px;
+        height: 8px;
+        background: var(--loading-dots);
+        border-radius: 50%;
+        animation: bounce 0.5s ease-in-out infinite;
+      }
+
+      .dot:nth-child(2) { animation-delay: 0.1s; }
+      .dot:nth-child(3) { animation-delay: 0.2s; }
+
+      @keyframes bounce {
+        0%, 100% { transform: translateY(0); }
+        50% { transform: translateY(-10px); }
+      }
+
+      .from-text {
+        color: var(--bluespark);
+        font-size: 0.875rem;
+        margin-top: 0.5rem;
+      }
+    </style>
+    <script>
+      // Initialize dark mode before app loads
+      (function() {
+        const savedTheme = localStorage.getItem('darkMode');
+        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+        if (savedTheme === 'dark' || (!savedTheme && prefersDark)) {
+          document.documentElement.classList.add('dark');
+        }
+      })();
+    </script>
   </head>
   <body>
+    <div id="loading-screen">
+      <img src="/favicon.svg" alt="Logo" />
+      <div class="loading-dots">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+      <div class="from-text">from BlueSpark</div>
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      setTimeout(() => {
+        const loadingScreen = document.getElementById('loading-screen');
+        loadingScreen.classList.add('fade-out');
+        setTimeout(() => {
+          loadingScreen.style.display = 'none';
+        }, 500);
+      }, 2000);
+    </script>
   </body>
 </html>
