--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html lang="en">
   <head>
 <!-- Google tag (gtag.js) -->
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "BlueSpark MZ",
+  "url": "https://www.bluesparkmz.co.mz",
+  "logo": "https://www.bluesparkmz.co.mz/logo.png",
+  "founder": "Jorge sebastiao",
+  "foundingDate": "2023-01-15",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Maputo",
+    "addressCountry": "MZ"
+  },
+  "sameAs": [
+    "https://www.facebook.com/BlueSparkMZ",
+    "https://www.instagram.com/BlueSparkMZ"
+  ]
+}
+</script>
+   
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KLJB455GCY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
